Fixed Layout issue where Footer wasn't sticking to bottom

--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -2,11 +2,15 @@
 @value small, medium, large from breakpoints;
 
 .layout {
-    position: relative;
+    /* position: relative; */
+    /* min-height: 100%; */
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
 }
 
 .container {
+    flex-grow: 1;
     padding: 0 2em;
     margin: 0 auto;
     /* max-width: 1110px; */
