--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -2,7 +2,7 @@
 @value small, medium, large from breakpoints;
 
 .main {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     /* display: grid; */
     /* grid-template-rows: auto; */
     display: flex;
